feat(completion): some bugfixes and improvements to openai & anthropic